--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
     "@types/aos": "^3.0.5",
+    "@types/google-map-react": "^2.1.8",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -19,6 +20,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "google-map-react": "^2.2.1",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
