--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "@types/aos": "^3.0.5",
     "@types/google-map-react": "^2.1.8",
@@ -21,6 +22,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "google-map-react": "^2.2.1",
+    "heroicons": "^2.0.18",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
