--- a/package.json
+++ b/package.json
@@ -6,30 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --config eslint.config.mjs"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@material-tailwind/react": "^2.1.2",
-    "@types/aos": "^3.0.5",
-    "@types/google-map-react": "^2.1.8",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "aos": "^2.3.4",
-    "autoprefixer": "10.4.14",
-    "clsx": "^2.0.0",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "google-map-react": "^2.2.1",
-    "heroicons": "^2.0.18",
-    "next": "13.4.7",
-    "postcss": "8.4.24",
+    "@heroicons/react": "^2.1.0",
+    "@material-tailwind/react": "2.1.10",
+    "@types/aos": "^3.0.6",
+    "@types/google-map-react": "^2.1.9",
+    "@types/node": "20.11.30",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.42.0",
+    "@typescript-eslint/parser": "8.42.0",
+    "aos": "2.3.4",
+    "autoprefixer": "10.4.16",
+    "clsx": "^2.1.0",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "15.2.0",
+    "eslint-plugin-prettier": "^5.1.0",
+    "eslint-plugin-react-hooks": "6.0.0",
+    "google-map-react": "2.2.5",
+    "heroicons": "^2.1.0",
+    "next": "^15.5.2",
+    "postcss": "8.4.32",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "sass": "^1.68.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "react-icons": "^4.12.0",
+    "sass": "^1.69.5",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
+  },
+  "devDependencies": {
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "typescript-eslint": "^8.42.0"
   }
 }
